--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "test:unit": "jest"
     },
     "dependencies": {
+        "axios": "^1.6.1",
+        "flush-promises": "^1.0.2",
         "vue": "^3.3.4"
     },
     "devDependencies": {
